fixed the styles for menu display on smaller screen

--- a/style.css
+++ b/style.css
@@ -100,23 +100,24 @@ aside hr {
 }
 
 @media (max-width: 576px) {
-  nav {
+  .nav-overlay {
     position: fixed;
     top: 0;
     right: 0;
     background-color: hsl(36, 100%, 99%);
     height: 100vh;
     width: 65vw;
-    z-index: 1;
     padding-top: 45px;
     padding-right: 20px;
   }
 
-  .menu-icon-container {
-  }
   .menu-container {
-    display: block !important;
+    display: none;
     margin-top: 20px;
+  }
+
+  .nav-overlay .display-menu {
+    display: block !important;
   }
 
   .menu {
@@ -125,11 +126,17 @@ aside hr {
     margin-top: 100px;
     margin-left: 15px;
   }
+
   .menu .nav-item {
     margin-bottom: 10px;
   }
+
   .menu .nav-link {
     color: hsl(240, 100%, 5%) !important;
     font-weight: 500;
+  }
+
+  h1 {
+    font-size: 2rem !important;
   }
 }
